--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "ol": "^6.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "react-uuid": "^1.0.2",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
