--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-google-login": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-tiny-link": "^3.2.0",
     "react-uuid": "^1.0.2",
     "uuid": "^3.4.0"
   },
