--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       "^@/(.*)$": "<rootDir>/src/$1"
     },
     "testMatch": [
-      "<rootDir>/tests/*"
+      "<rootDir>/tests/**"
     ],
     "transformIgnorePatterns": [
       "/node_modules/(?!(ol|labelgun|mapbox-to-ol-style|ol-mapbox-style)/).*/"
