--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "react-dom": "^16.12.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.1",
+    "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-tiny-link": "^3.2.0",
     "react-uuid": "^1.0.2",
+    "spin.js": "^4.1.0",
     "uuid": "^3.4.0"
   },
   "scripts": {
